docs/doc.bnf
<program>         ::= <statement> | <statement> <program>
<statement>       ::= <assignment> 
                      | <expression> ";"
                      | <if_statement>
                      | <while_statement>
                      | <print_statement>
<assignment>      ::= <name> "=" <expression> ";"
<if_statement>    ::= "check" <conditional> "then" <statement> ["or" <statement>] [";"]
<while_statement> ::= "loop" <conditional> "until" <statement> [";"]
<print_statement> ::= "print" (<expression> | <string>) ";"
<expression>      ::= <term> { ("+" | "-") <term> }
<term>            ::= <factor> { ("*" | "/") <factor> }
<factor>          ::= <number> 
                      | <name> 
                      | <string>
                      | "(" <expression> ")"
<conditional> ::= <bool_term> { ("OR") <bool_term> }
<bool_term> ::= <bool_factor> { ("AND") <bool_factor> }
<bool_factor> ::= <expression> <relational_operator> <expression>
<relational_operator> ::= "==" | "!=" | "<" | "<=" | ">" | ">="
<number> ::= [0-9]+
<name> ::= [a-zA-Z_][a-zA-Z0-9_]*
<string> ::= '"' .* '"'
